--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pathpilot",
+  "name": "careerpath",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,30 +9,48 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@opentelemetry/api": "^1.9.0",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.2.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
+    "@tabler/icons-react": "^3.31.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
-    "firebase": "^11.8.0",
-    "groq-sdk": "^0.22.0",
-    "lucide-react": "^0.511.0",
-    "next": "15.3.2",
+    "cobe": "^0.6.3",
+    "firebase": "^11.6.0",
+    "framer-motion": "^12.7.4",
+    "fs": "0.0.1-security",
+    "groq-sdk": "^0.19.0",
+    "lucide-react": "^0.487.0",
+    "motion": "^12.6.5",
+    "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.1.91",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.2.0",
+    "tesseract.js": "^6.0.1",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -41,9 +59,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
 }
