--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.7",
@@ -26,19 +27,23 @@
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
     "@tabler/icons-react": "^3.31.0",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "firebase": "^11.6.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.7.4",
     "fs": "0.0.1-security",
     "groq-sdk": "^0.19.0",
     "lucide-react": "^0.487.0",
+    "mammoth": "^1.9.1",
     "motion": "^12.6.5",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
+    "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.1.91",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -55,7 +60,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/axios": "^0.14.4",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
