--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
     "@tabler/icons-react": "^3.31.0",
+    "@types/canvas-confetti": "^1.9.0",
     "axios": "^1.10.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
@@ -46,6 +48,7 @@
     "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.1.91",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-firebase-hooks": "^5.1.1",
